repair of structure on mobile on oferta section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -194,13 +194,11 @@ body {
 		font-family: 'Square Peg', cursive;
 		&--bottom {
 			font-size: 3rem;
-			display: block;
 		}
 		h1 {
 			font-size: 5rem;
 			font-weight: 200;
 			text-align: center;
-			display: block;
 			span {
 				display: block;
 			}
